Fix invisible nav on mobile

--- a/app/assets/stylesheets/main-nav.scss
+++ b/app/assets/stylesheets/main-nav.scss
@@ -26,10 +26,6 @@
         }
     }
 
-    a {
-	color: white;
-    }
-
     .nav-link {
 	line-height: 40px;
     }
